--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,3 +2,11 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "modules/header";
+@import "modules/main_visual";
+@import "modules/top_introduction";
+@import "modules/top_middle_DL";
+@import "modules/top_key_features";
+@import "modules/pickup_category";
+@import "modules/pickup_brand";
+@import "modules/app_banner";
+@import "modules/footer";
