--- a/app/assets/stylesheets/modules/_top_introduction.scss
+++ b/app/assets/stylesheets/modules/_top_introduction.scss
@@ -31,12 +31,12 @@
         font-size: 24px;
         font-weight: bold;
         &--green {
-          //color: $light_green;
+          color: #3CCACE;
           font-size: 24px;
           font-weight: bold;
         }
         &--black {
-          //color: $black;
+          color: black;
           font-size: 24px;
           font-weight: bold;
         }
