--- a/app/views/home/_header.html.haml
+++ b/app/views/home/_header.html.haml
@@ -1,11 +1,11 @@
-.header
-  .header__box
-    .header__box__main
+.home-header__header
+  .home-header__header__box
+    .home-header__header__box__main
       = link_to root_path do
-        .header__box__main--icon
-    .header__box__sub
-      .header__box__sub__left
-        .header__box__sub__left--category
+        .home-header__header__box__main--icon
+    .home-header__header__box__sub
+      .home-header__header__box__sub__left
+        .home-header__header__box__sub__left--category
           = link_to "#", class: "categoryBtn", id: "left-category" do
             = "カテゴリー"
 
@@ -16,11 +16,11 @@
                   %li.secondMenu__children__child
                     %ul.thirdMenu__grandchildren                       
                       %li.thirdMenu__grandchildren__grandchild
-        .header__box__sub__left--brand
-      .header__box__sub__right
-        .header__box__sub__right--log-in
+        .home-header__header__box__sub__left--brand
+      .home-header__header__box__sub__right
+        .home-header__header__box__sub__right--log-in
           ログイン
-        .header__box__sub__right--register-user
+        .home-header__header__box__sub__right--register-user
           新規会員登録
-        .header__box__sub__right--log-out
+        .home-header__header__box__sub__right--log-out
           マイページ
