--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,5 @@
 @import "modules/pickup_brand";
 @import "modules/app_banner";
 @import "modules/footer";
+@import "products/new";
+@import "products/show";
