--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,5 @@
 @import "modules/footer";
 @import "products/new";
 @import "products/show";
+@import "modules/registrations.new";
+@import "modules/sessions.new";
