--- a/app/assets/stylesheets/products/_new.scss
+++ b/app/assets/stylesheets/products/_new.scss
@@ -1,3 +1,17 @@
-.header{
-  color:blueviolet;
+.products-new-header{
+  height: 130px;
+  width: 100%;
+  background-color: chartreuse;
+}
+
+.products-new-main{
+  height: 100vh;
+  width: 100%;
+  background-color: cornsilk;
+}
+
+.products-new-footer{
+  height: 210px;
+  width: 100%;
+  background-color: darkcyan;
 }
