addヘッダーロゴ、remove.DS_Store
what

add
ヘッダーにロゴを追加

remove
.DS_Storeは不要なファイルなので現時点で生成されているものは削除した

--- a/app/assets/stylesheets/products/_new.scss
+++ b/app/assets/stylesheets/products/_new.scss
@@ -2,6 +2,12 @@
   height: 130px;
   width: 100%;
   background-color: chartreuse;
+  display:flex;
+  align-items:center;
+  &__logo{
+    height: 55px;
+    margin: 0 auto;
+  }
 }
 
 .products-new-main{
