--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,4 +1,5 @@
 .products-new-header
   = image_tag 'logo/logo.png', class: "products-new-header__logo"
 .products-new-main
+  .products-new-main__form
 .products-new-footer
