update  home/indexのクラス名
## What
- main_visual
- top_introduction
- top_middle_DL
- top_key_features
- pickup_category
## Why
= 他テーブルのクラスメイト被ることを防ぐため

--- a/app/assets/stylesheets/modules/_top_middle_DL.scss
+++ b/app/assets/stylesheets/modules/_top_middle_DL.scss
@@ -1,4 +1,4 @@
-.block {
+.top_middle__block {
   background-image: image-url("pict/bg-topMiddleDl-pict.jpg");
   height: 400px;
   background-size: cover;
