--- a/app/views/home/_top_middle_DL.html.haml
+++ b/app/views/home/_top_middle_DL.html.haml
@@ -1,15 +1,15 @@
-.block
-  .block__in-box
-    .block__in-box__title
+.top_middle__block
+  .top_middle__block__in-box
+    .top_middle__block__in-box__title
       会員数日本一位
-    .block__in-box__text
-      .block__in-box__text--1
+    .top_middle__block__in-box__text
+      .top_middle__block__in-box__text--1
         FURIMAは、フリマアプリで最も人気。
-      .block__in-box__text--2
+      .top_middle__block__in-box__text--2
         出品・購入回数も業界最多です！
-      .block__in-box__text--3
+      .top_middle__block__in-box__text--3
         欲しかったあの商品に出会えるかもしれません。
-    .block__in-box__icon
+    .top_middle__block__in-box__icon
       = link_to "#", class: "in-box__icon" do
         = image_tag 'bag_app.png',class: "appBtn"
       = link_to "#", class: "in-box__icon" do
