--- a/app/assets/stylesheets/modules/_main_visual.scss
+++ b/app/assets/stylesheets/modules/_main_visual.scss
@@ -1,4 +1,4 @@
-.create-one{
+.main_visual_create-one{
   width: 100%;
   height: 560px;
   background-image: image-url("pict/bg-mainVisual-pict_pc.jpg");
