--- a/app/assets/stylesheets/modules/_pickup_category.scss
+++ b/app/assets/stylesheets/modules/_pickup_category.scss
@@ -11,13 +11,13 @@
   display: inline-block;
   background-color: white;
 }
-.product--name{
+.pickup_category__product--name{
   overflow: hidden;
   line-height: 1.5;
   font-size: 16px;
   text-align: left;
 }
-.product__images{
+.pickup_category__product__images{
   width: 220px;
   height: 150px;
   position: relative;
@@ -36,16 +36,16 @@
     object-fit: cover;
   }
 }
-.details__menu{
+.pickup_category__details__menu{
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.taxIncluded{
+.pickup_category__taxIncluded{
   font-size: 10px;
   text-align: left;
 }
-.containerCategory{
+.pickup_category__containerCategory{
   background-color: #f8f8f8;
   padding: 80px 0px;
   height: 100%;
@@ -64,7 +64,7 @@
       width: 780px;
       margin: 26px auto;
       display: flex;
-        .product__images {
+        .pickup_category__product__images {
           margin-left: 45px;
         }
       &__list{
