--- a/app/views/home/_main_visual.html.haml
+++ b/app/views/home/_main_visual.html.haml
@@ -1,11 +1,11 @@
-.create-one
-  .create-one__body-main
-    .create-one__body-main--top
+.main_visual_create-one
+  .main_visual_create-one__body-main
+    .main_visual_create-one__body-main--top
       %p 人生を変えるフリマアプリ
-    .create-one__body-main--middle
+    .main_visual_create-one__body-main--middle
       %p FURIMAはだれでもかんたんに出品・購入できる
       %p フリマアプリです
-    .create-one__body-main--btn
+    .main_visual_create-one__body-main--btn
       = link_to "#", class: "icon" do
         = image_tag 'bag_app.png',class: "appBtn"
       = link_to "#", class: "icon" do
