--- a/app/views/home/_top_introduction.html.haml
+++ b/app/views/home/_top_introduction.html.haml
@@ -1,39 +1,39 @@
-.box
-  .box__top
-    .box__top--title
+.top_introduction__box
+  .top_introduction__box__top
+    .top_introduction__box__top--title
       FURIMAが選ばれる3つの理由
-    .box__top--line
-  %ul.box__mains
-    %li.box__mains__main
+    .top_introduction__box__top--line
+  %ul.top_introduction__box__mains
+    %li.top_introduction__box__mains__main
       = image_tag "pict/pict-reason-01.jpg", class: "top-img"
-      .box__mains__main--sub-title
-        .box__mains__main--sub-title--green
+      .top_introduction__box__mains__main--sub-title
+        .top_introduction__box__mains__main--sub-title--green
           3分
-          %span.box__mains__main--sub-title--black
+          %span.top_introduction__box__mains__main--sub-title--black
             ですぐに出品
-      %p.box__mains__main--text
+      %p.top_introduction__box__mains__main--text
         スマホで入力するだけで簡単に出品できる！
-      .box__mains__main--num
+      .top_introduction__box__mains__main--num
         1
-    %li.box__mains__main
+    %li.top_introduction__box__mains__main
       = image_tag "pict/pict-reason-02.jpg", class: "top-img"
-      .box__mains__main--sub-title
-        .box__mains__main--sub-title--green
+      .top_introduction__box__mains__main--sub-title
+        .top_introduction__box__mains__main--sub-title--green
           シンプル
-          %span.box__mains__main--sub-title--black
+          %span.top_introduction__box__mains__main--sub-title--black
             で使いやすい
-      %p.box__mains__main--text
+      %p.top_introduction__box__mains__main--text
         めんどくさい入力は必要なく、検索も購入もスムーズ！
-      .box__mains__main--num
+      .top_introduction__box__mains__main--num
         2
-    %li.box__mains__main-right
+    %li.top_introduction__box__mains__main-right
       = image_tag "pict/pict-reason-03.jpg", class: "top-img"
-      .box__mains__main--right--sub-title
-        .box__mains__main--sub-title--black
+      .top_introduction__box__mains__main--right--sub-title
+        .top_introduction__box__mains__main--sub-title--black
           手数料
-          %span.box__mains__main--sub-title--green
+          %span.top_introduction__box__mains__main--sub-title--green
             業界最安
-      %p.box__mains__main-right--text
+      %p.top_introduction__box__mains__main-right--text
         最大3%でお得に出品&購入！
-      .box__mains__main-right--num
+      .top_introduction__box__mains__main-right--num
         3
