--- a/app/assets/stylesheets/products/_new.scss
+++ b/app/assets/stylesheets/products/_new.scss
@@ -1,7 +1,7 @@
-.products-new-header{
+.products_new-header{
   height: 130px;
   width: 100%;
-  background-color: chartreuse;
+  background-color: #f8f8f8;
   display:flex;
   align-items:center;
   &__logo{
@@ -10,21 +10,80 @@
   }
 }
 
-.products-new-main{
+.products_new-main{
   height: 100vh;
   width: 100%;
-  background-color: cornsilk;
+  background-color: #f8f8f8;
   &__form{
     height: 100%;
     width: 50%;
-    background-color: cyan;
+    background-color: #fff;
     margin: 0 auto;
-    padding: 20px;
+    padding: 40px;
   }
 }
 
-.products-new-footer{
+.products_new-newimage{
+  height: 270px;
+  width: 100%;
+  padding-bottom: 40px;
+  border-bottom: 1px solid #f8f8f8;
+}
+
+.products_new-details__headline{
+  height: 35px;
+  width: 100%;
+  display: flex;
+  &--title{
+    font-size: 13px;
+    font-weight: bold;
+    padding-right: 10px;
+  }
+  &--required{
+    height: 20px;
+    width: 30px;
+    background-color: red;
+    color: #fff;
+    font-size: 11px;
+    font-weight: bold;
+    line-height: 20px;
+    text-align: center;
+    border-radius: 3px;
+  }
+}
+
+.products_new-details__explanation{
+  height: 20px;
+  width: 100%;
+  font-size: 13px;
+  margin-bottom: 20px;
+}
+.products_new-imagearea{
+  height: calc(100% - 75px);
+  width: 100%;
+  background-color: #f8f8f8;
+  border: dashed 1px #d3d3d3;
+  margin-bottom: 20px;
+  &__select{
+    min-height: 100%;
+    width: 100%;
+    display: block;
+    text-align: center;
+    padding-top: 40px;
+    &--icon{
+      padding-bottom: 10px;
+    }
+    &--explanation{
+      font-size: 11px;
+    }
+  }
+}
+
+
+
+
+.products_new-footer{
   height: 210px;
   width: 100%;
-  background-color: darkcyan;
+  background-color: #f8f8f8;
 }
