--- a/app/assets/stylesheets/products/_show.scss
+++ b/app/assets/stylesheets/products/_show.scss
@@ -1,3 +1,219 @@
-.test{
-  color:blueviolet;
+.main{
+  background-color: #f47c7c;
+
+  .showMain{    
+    padding: 40px;
+    margin: 0 auto;
+    .contentRight{
+      width: 700px;
+      margin: 0 auto;
+
+    .itemBox{
+        background-color: #fff;
+        padding: 24px 40px 40px;
+        .itemBox__name{
+          text-align: center;
+          font-weight: bold;
+          font-size: 24px;
+        }
+        .itemBox__body{
+          margin: 16px 0 0;
+          ul{
+            display: flex;
+            position: relative;
+            li{    
+              display: flex;
+              flex-direction: column;
+              width: 560px;
+              align-items: center;
+              margin: 0 auto;
+              img{
+                object-fit: cover;
+                height: 346px;
+                width: 100%;
+                vertical-align: bottom;
+              }
+              ul{
+                display: flex;
+                justify-content: center;
+                margin-top: 10px;
+                li{
+                  width: 25%;
+                  margin: 0 10px 0 0;
+                  img{
+                    object-fit: cover;
+                    height: 87px;
+                  }
+                }
+              }
+            }
+          }
+        }
+
+        .itemBox__price{
+          margin: 24px 0 24px;
+          text-align: center;
+          display: flex;
+          flex-direction: column;
+          span{
+            font-size: 46px;
+            font-weight: bold;
+            margin: 0 10px 0 0;
+          }
+          .itemBox__price-tax-sipfee{
+            span{
+              font-size: 16px;
+              font-weight: normal;
+            }
+          }
+        }
+
+      .itemDetail{
+        line-height: 1.5;
+        font-size: 18px;
+        margin-bottom: 30px;
+      }
+
+
+
+      .table{
+        margin-bottom: 20px;
+        table{
+          width: 100%;
+          height: 375px;
+          border-collapse: collapse;
+          border: 1px solid #f8f8f8;
+          tbody{
+            tr{
+              a{
+                text-decoration: none;
+                color: #3CCACE;
+              }
+              th{
+                width: 20%;
+                background-color: #eee;
+                font-weight: 400;
+                padding: 8px;
+                border: 1px solid #dedede;
+                font-size: 14px;
+                text-align: center;
+              }
+              td{
+                width: 61%;
+                padding: 15px 15px;
+                border: 1px solid #dedede;
+                font-size: 14px;
+              }
+            }
+          }
+        }
+      }
+
+
+
+      .optionalArea{
+        display: flex;
+        justify-content: space-between;
+        ul{    
+          margin: 10px 0 0;
+          display: flex;
+          li{
+            margin-right: auto;
+            padding: 6px 10px;
+            border-radius: 40px;
+            color: #3CCACE;
+            border: 1px solid #ffb340;
+            // i.fa.fa-star{}
+          }
+        }
+        .optional{
+          margin: 10px 0 0;
+          display: flex;
+          .optionalBtn{
+            font-size: 14px;
+            a{
+              display: inline-block;
+              border-radius: 4px;
+              color: #333;
+              border: 1px solid #333;
+              text-decoration: none;
+              // .fa{}
+            }
+          }
+        }
+      }
+    }
+    
+    .commentBox{
+      padding: 24px;
+      background-color: #fff;
+      margin: 10px 0;
+      text-align: center;
+      .new_comment{
+        #comment_body{    
+          width: 100%;
+          min-height: 104px;
+          padding: 10px;}
+          p.noticeMsg{
+            padding: 8px;
+            font-size: 14px;
+            background-color: #f8f8f8;
+            margin: 10px 0;
+            text-align: left;
+          }
+          button.commentBtn{
+            font-size: 18px;
+          line-height: 48px;
+          background: #3CCACE;
+          border: 1px solid #3CCACE;
+          color: #fff;
+          width: 60%;
+          font-size: 18px;
+          border-radius: 100px;
+          }
+          // i.fa.fa-comment{}
+      
+      }
+    }
+
+    .link-block{
+      height: 24px;
+      ul.links{
+        li{
+          float: left;
+          a{
+            text-decoration: none;
+            color: #3CCACE;
+          }
+        }
+        li:last-child{
+          float: right;
+          a{
+            text-decoration: none;
+            color: #3CCACE;
+          }
+        }
+      }
+    }
+
+    .relatedItems{
+      clear: both;
+      a{
+        display: block;
+        margin: 24px 0 8px;
+        color: #3CCACE;
+        text-decoration: none;
+        font-weight: bold;
+        font-size: 22px;
+        position: relative;
+      }
+      .productLists{}
+    }
+
+
+
+
+
+    }
+  }
 }
