--- a/app/assets/stylesheets/modules/_app_banner.scss
+++ b/app/assets/stylesheets/modules/_app_banner.scss
@@ -11,11 +11,11 @@
   width: 180px;
 }
 
-.banner {
+.app_banner__banner {
   background-color: gray;
   padding: 100px 40px;
   position: relative;
-  background-image: image-url("bg-appBanner-pict.jpg");
+  background-image: image-url("pict/bg-appBanner-pict.jpg");
   background-size: cover;
   background-position: center;
   &__inner{
