--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,3 +4,6 @@
 = render 'top_middle_DL'
 = render 'top_key_features'
 = render 'pickup_category'
+= render 'pickup_brand'
+= render 'app_banner'
+= render 'footer'
