--- a/app/views/home/_main_visual.html.haml
+++ b/app/views/home/_main_visual.html.haml
@@ -9,4 +9,4 @@
       = link_to "#", class: "icon" do
         = image_tag 'bag_app.png',class: "appBtn"
       = link_to "#", class: "icon" do
-        = image_tag 'google-play-badge.png',class: "googleBtn"
+        = image_tag 'ja_badge_web_generic.png',class: "googleBtn"
