--- a/app/views/home/_top_middle_DL.html.haml
+++ b/app/views/home/_top_middle_DL.html.haml
@@ -13,4 +13,4 @@
       = link_to "#", class: "in-box__icon" do
         = image_tag 'bag_app.png',class: "appBtn"
       = link_to "#", class: "in-box__icon" do
-        = image_tag 'google-play-badge.png',class: "googleBtn"
+        = image_tag 'ja_badge_web_generic.png',class: "googleBtn"
