--- a/app/views/products/#showsample.html.haml
+++ b/app/views/products/#showsample.html.haml
@@ -113,120 +113,120 @@
 
 
 
--# %section.item-box-container.l-single-container
--#   %h1.item-name ギャグマンガ日和GB 1 増田こうすけ劇場
--#   .item-main-content.clearfix
--#     .item-photo
--#       .owl-carousel.owl-loaded.owl-drag
--#         .owl-stage-outer
--#           .owl-stage{:style => "left: 0px; width: 600px;"}
--#             .owl-item.active{:style => "width: 300px;"}
--#               .owl-item-inner.is-higher-height
--#                 %img.owl-lazy{:alt => "ギャグマンガ日和GB 1 増田こうすけ劇場", "data-src" => "https://static.mercdn.net/item/detail/orig/photos/m58985111622_1.jpg?1587558918", :src => "https://static.mercdn.net/item/detail/orig/photos/m58985111622_1.jpg?1587558918", :style => "opacity: 1;"}/
--#             .owl-item{:style => "width: 300px;"}
--#               .owl-item-inner.is-higher-height
--#                 %img.owl-lazy{:alt => "ギャグマンガ日和GB 1 増田こうすけ劇場", "data-src" => "https://static.mercdn.net/item/detail/orig/photos/m58985111622_2.jpg?1587558918"}/
--#         .owl-nav.disabled
--#           .owl-prev prev
--#           .owl-next next
--#         .owl-dots
--#           .owl-dot.active
--#             %span
--#             .owl-dot-inner
--#               %img.is-higher-height{:src => "https://static.mercdn.net/item/detail/orig/photos/m58985111622_1.jpg?1587558918"}/
--#           .owl-dot
--#             %span
--#             .owl-dot-inner
--#               -# %img.is-higher-height{:src => "https://static.mercdn.net/item/detail/orig/photos/m58985111622_2.jpg?1587558918"}/
--#     .item-price-box.text-center.visible-sp
--#       %span.item-price.bold ¥400
--#       %span.item-tax (税込)
--#       %span.item-shipping-fee 送料込み
--#     %section.visible-sp
--#       .item-btn-float-area
--#         %a.item-buy-btn{:href => "https://www.mercari.com/jp/transaction/buy/m58985111622/?_s=U2FsdGVkX1_af0K0gctOZaHsSfayx02KI3wH_o8bSUCaGTSZkBUAreEHfbK2ZHuYKANCrXQkjQEWpzwjzl6lFNZzIdUk0DYWhk7tCiyoUXy6HYZ2-wHzVOscIJXrIZXH"}
--#           購入画面に進む
--#     %table.item-detail-table
--#       %tbody
--#         %tr
--#           %th 出品者
--#           %td
--#             %a{:href => "https://www.mercari.com/jp/u/654254455/"} ほづみ
--#             %div
--#               .item-user-ratings
--#                 %i.icon-good
--#                 %span 17
--#               .item-user-ratings
--#                 %i.icon-normal
--#                 %span 0
--#               .item-user-ratings
--#                 %i.icon-bad
--#                 %span 0
--#         %tr
--#           %th カテゴリー
--#           %td
--#             %a{:href => "https://www.mercari.com/jp/category/5/"}
--#               %div 本・音楽・ゲーム
--#             %a{:href => "https://www.mercari.com/jp/category/71/"}
--#               .item-detail-table-sub-category
--#                 %i.icon-arrow-right
--#                 漫画
--#             %a{:href => "https://www.mercari.com/jp/category/663/"}
--#               .item-detail-table-sub-sub-category
--#                 %i.icon-arrow-right
--#                 少年漫画
--#         %tr
--#           %th ブランド
--#           %td
--#         %tr
--#           %th 商品の状態
--#           %td 目立った傷や汚れなし
--#         %tr
--#           %th 配送料の負担
--#           %td 送料込み(出品者負担)
--#         %tr
--#           %th 配送の方法
--#           %td ゆうゆうメルカリ便
--#         %tr
--#           %th 配送元地域
--#           %td 福島県
--#         %tr
--#           %th 発送日の目安
--#           %td 2~3日で発送
--#   .item-price-box.text-center
--#     %span.item-price.bold ¥400
--#     %span.item-tax (税込)
--#     %span.item-shipping-fee 送料込み
--#   %a.item-buy-btn{:href => "https://www.mercari.com/jp/transaction/buy/m58985111622/?_s=U2FsdGVkX1_af0K0gctOZaHsSfayx02KI3wH_o8bSUCaGTSZkBUAreEHfbK2ZHuYKANCrXQkjQEWpzwjzl6lFNZzIdUk0DYWhk7tCiyoUXy6HYZ2-wHzVOscIJXrIZXH"}
--#     購入画面に進む
--#   %a.item-action-text{"data-action" => "item/openDetail", "data-adjust-url" => "http://app.adjust.io/xio2ii?campaign=iOS&adgroup=items.buy_button1", "data-key" => "id=m58985111622", "data-play-id" => "com.kouzoh.mercari", "data-toggle" => "open-app", "data-url-scheme" => "mercari://"}
--#     アプリで購入
--#   .item-description.f14
--#     %p.item-description-inner
--#       「ギャグマンガ日和GB 増田こうすけ劇場 1」
--#       増田こうすけ
--#       定価: ￥ 481
+%section.item-box-container.l-single-container
+  %h1.item-name ギャグマンガ日和GB 1 増田こうすけ劇場
+  .item-main-content.clearfix
+    .item-photo
+      .owl-carousel.owl-loaded.owl-drag
+        .owl-stage-outer
+          .owl-stage{:style => "left: 0px; width: 600px;"}
+            .owl-item.active{:style => "width: 300px;"}
+              .owl-item-inner.is-higher-height
+                %img.owl-lazy{:alt => "ギャグマンガ日和GB 1 増田こうすけ劇場", "data-src" => "https://static.mercdn.net/item/detail/orig/photos/m58985111622_1.jpg?1587558918", :src => "https://static.mercdn.net/item/detail/orig/photos/m58985111622_1.jpg?1587558918", :style => "opacity: 1;"}/
+            .owl-item{:style => "width: 300px;"}
+              .owl-item-inner.is-higher-height
+                %img.owl-lazy{:alt => "ギャグマンガ日和GB 1 増田こうすけ劇場", "data-src" => "https://static.mercdn.net/item/detail/orig/photos/m58985111622_2.jpg?1587558918"}/
+        .owl-nav.disabled
+          .owl-prev prev
+          .owl-next next
+        .owl-dots
+          .owl-dot.active
+            %span
+            .owl-dot-inner
+              %img.is-higher-height{:src => "https://static.mercdn.net/item/detail/orig/photos/m58985111622_1.jpg?1587558918"}/
+          .owl-dot
+            %span
+            .owl-dot-inner
+              -# %img.is-higher-height{:src => "https://static.mercdn.net/item/detail/orig/photos/m58985111622_2.jpg?1587558918"}/
+    .item-price-box.text-center.visible-sp
+      %span.item-price.bold ¥400
+      %span.item-tax (税込)
+      %span.item-shipping-fee 送料込み
+    %section.visible-sp
+      .item-btn-float-area
+        %a.item-buy-btn{:href => "https://www.mercari.com/jp/transaction/buy/m58985111622/?_s=U2FsdGVkX1_af0K0gctOZaHsSfayx02KI3wH_o8bSUCaGTSZkBUAreEHfbK2ZHuYKANCrXQkjQEWpzwjzl6lFNZzIdUk0DYWhk7tCiyoUXy6HYZ2-wHzVOscIJXrIZXH"}
+          購入画面に進む
+    %table.item-detail-table
+      %tbody
+        %tr
+          %th 出品者
+          %td
+            %a{:href => "https://www.mercari.com/jp/u/654254455/"} ほづみ
+            %div
+              .item-user-ratings
+                %i.icon-good
+                %span 17
+              .item-user-ratings
+                %i.icon-normal
+                %span 0
+              .item-user-ratings
+                %i.icon-bad
+                %span 0
+        %tr
+          %th カテゴリー
+          %td
+            %a{:href => "https://www.mercari.com/jp/category/5/"}
+              %div 本・音楽・ゲーム
+            %a{:href => "https://www.mercari.com/jp/category/71/"}
+              .item-detail-table-sub-category
+                %i.icon-arrow-right
+                漫画
+            %a{:href => "https://www.mercari.com/jp/category/663/"}
+              .item-detail-table-sub-sub-category
+                %i.icon-arrow-right
+                少年漫画
+        %tr
+          %th ブランド
+          %td
+        %tr
+          %th 商品の状態
+          %td 目立った傷や汚れなし
+        %tr
+          %th 配送料の負担
+          %td 送料込み(出品者負担)
+        %tr
+          %th 配送の方法
+          %td ゆうゆうメルカリ便
+        %tr
+          %th 配送元地域
+          %td 福島県
+        %tr
+          %th 発送日の目安
+          %td 2~3日で発送
+  .item-price-box.text-center
+    %span.item-price.bold ¥400
+    %span.item-tax (税込)
+    %span.item-shipping-fee 送料込み
+  %a.item-buy-btn{:href => "https://www.mercari.com/jp/transaction/buy/m58985111622/?_s=U2FsdGVkX1_af0K0gctOZaHsSfayx02KI3wH_o8bSUCaGTSZkBUAreEHfbK2ZHuYKANCrXQkjQEWpzwjzl6lFNZzIdUk0DYWhk7tCiyoUXy6HYZ2-wHzVOscIJXrIZXH"}
+    購入画面に進む
+  %a.item-action-text{"data-action" => "item/openDetail", "data-adjust-url" => "http://app.adjust.io/xio2ii?campaign=iOS&adgroup=items.buy_button1", "data-key" => "id=m58985111622", "data-play-id" => "com.kouzoh.mercari", "data-toggle" => "open-app", "data-url-scheme" => "mercari://"}
+    アプリで購入
+  .item-description.f14
+    %p.item-description-inner
+      「ギャグマンガ日和GB 増田こうすけ劇場 1」
+      増田こうすけ
+      定価: ￥ 481
       
--#       即購入okです。
--#       一巻のみの販売
+      即購入okです。
+      一巻のみの販売
       
       
--#       \#増田こうすけ #漫画 #COMIC #少年
+      \#増田こうすけ #漫画 #COMIC #少年
       
--#       連載開始15周年を記念して「ギャグマンガ日和」がリニューアル! 新たに「ギャグマンガ日和GB」としてスタート!! でも聖徳太子やクマ吉君など、お馴染みのキャラもいるよ!!!
--#   .item-button-container.clearfix
--#     .item-button-left
--#       %button.item-button.item-button-like{"data-ga" => "element", "data-ga-category" => "LIKE", "data-ga-label" => "like!", "data-id" => "m58985111622", "data-toggle" => "like", :name => "like!", :type => "button"}
--#         %i.icon-like-border
--#         %span いいね!
--#         %span.fade-in-down{"data-num" => "like"} 0
--#       %a.item-button.item-button-report.clearfix{"data-modal" => "report-item", "data-open" => "modal", :href => ""}
--#         %i.icon-flag
--#         %span 不適切な商品の報告
--#       %input{:name => "like_add_url", :type => "hidden", :value => "https://www.mercari.com/jp/like/add/m58985111622/?_s=U2FsdGVkX1_af0K0gctOZaHsSfayx02KI3wH_o8bSUCaGTSZkBUAreEHfbK2ZHuYKANCrXQkjQEWpzwjzl6lFNZzIdUk0DYWhk7tCiyoUXy6HYZ2-wHzVOscIJXrIZXH"}/
--#       %input{:name => "like_del_url", :type => "hidden", :value => "https://www.mercari.com/jp/like/delete/m58985111622/?_s=U2FsdGVkX1_af0K0gctOZaHsSfayx02KI3wH_o8bSUCaGTSZkBUAreEHfbK2ZHuYKANCrXQkjQEWpzwjzl6lFNZzIdUk0DYWhk7tCiyoUXy6HYZ2-wHzVOscIJXrIZXH"}/
--#       %input{:name => "__csrf_value", :type => "hidden", :value => "6d2518b5c3c10c6223b2fb76fa46f041221ec755a98aa5e3380459057c6f060a7058a7d43bc25dfaccea37e7b7ce62c68be4df8a416fcfab910a25af2da9db57b"}/
--#     .item-button-right
--#       %a{:href => "https://www.mercari.com/jp/safe/description/", :target => "_blank"}
--#         %i.icon-lock
--#         %span あんしん・あんぜんへの取り組み
+      連載開始15周年を記念して「ギャグマンガ日和」がリニューアル! 新たに「ギャグマンガ日和GB」としてスタート!! でも聖徳太子やクマ吉君など、お馴染みのキャラもいるよ!!!
+  .item-button-container.clearfix
+    .item-button-left
+      %button.item-button.item-button-like{"data-ga" => "element", "data-ga-category" => "LIKE", "data-ga-label" => "like!", "data-id" => "m58985111622", "data-toggle" => "like", :name => "like!", :type => "button"}
+        %i.icon-like-border
+        %span いいね!
+        %span.fade-in-down{"data-num" => "like"} 0
+      %a.item-button.item-button-report.clearfix{"data-modal" => "report-item", "data-open" => "modal", :href => ""}
+        %i.icon-flag
+        %span 不適切な商品の報告
+      %input{:name => "like_add_url", :type => "hidden", :value => "https://www.mercari.com/jp/like/add/m58985111622/?_s=U2FsdGVkX1_af0K0gctOZaHsSfayx02KI3wH_o8bSUCaGTSZkBUAreEHfbK2ZHuYKANCrXQkjQEWpzwjzl6lFNZzIdUk0DYWhk7tCiyoUXy6HYZ2-wHzVOscIJXrIZXH"}/
+      %input{:name => "like_del_url", :type => "hidden", :value => "https://www.mercari.com/jp/like/delete/m58985111622/?_s=U2FsdGVkX1_af0K0gctOZaHsSfayx02KI3wH_o8bSUCaGTSZkBUAreEHfbK2ZHuYKANCrXQkjQEWpzwjzl6lFNZzIdUk0DYWhk7tCiyoUXy6HYZ2-wHzVOscIJXrIZXH"}/
+      %input{:name => "__csrf_value", :type => "hidden", :value => "6d2518b5c3c10c6223b2fb76fa46f041221ec755a98aa5e3380459057c6f060a7058a7d43bc25dfaccea37e7b7ce62c68be4df8a416fcfab910a25af2da9db57b"}/
+    .item-button-right
+      %a{:href => "https://www.mercari.com/jp/safe/description/", :target => "_blank"}
+        %i.icon-lock
+        %span あんしん・あんぜんへの取り組み
