--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -5,13 +5,15 @@
       .topContent
         
         .itemBox
-          %h2.itemBox__name product3
+          %h2.itemBox__name ギャグマンガ日和GB 1 増田こうすけ劇場
           .itemBox__body
             %ul
               %li
+                -# = image_tag 'dog.JPG', :size =>'320x480'　
                 %img{:src => "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/13/a007.png"}/
                 %ul
                   %li
+                    -# = image_tag 'dog.JPG', :size =>'320x480'　
                     %img{:height => "75", :src => "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/13/a007.png", :width => "75"}/
                   %li
                     %img{:height => "75", :src => "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/14/a001.png", :width => "75"}/
@@ -27,22 +29,22 @@
               %span
                 送料込み
 
-          .itemDetail 親譲りの無鉄砲で小供の時から損ばかりしている。小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。なぜそんな無闇をしたと聞く人があるかも知れぬ。別段深い理由でもない。新築の二階から首を出していたら、同級生の一人が冗談に、いくら威張っても、そこから飛び降りる事は出来まい。弱虫やーい。と囃したからである。小使に負ぶさって帰って来た時、おやじが大きな眼をして二階ぐらいから飛び降りて腰
+          .itemDetail ジョースター一族と、邪悪な吸血鬼と化したディオやその後継者たちが、1世紀以上に亘って繰り広げる戦いを描く大河群像劇である。舞台は1888年のイギリス。英国の青年貴族で強い正義感と勇気を持つ主人公ジョナサン・ジョースターと、下層階級の出身ながら類稀なカリスマ性と野望の持ち主ディオ・ブランドーの抗争劇。「石仮面」や「波紋」を背景に、2人の成長や対立が描かれている。
 
           .table
             %table
               %tbody
                 %tr
                   %th 出品者
-                  %td hoge
+                  %td 増田こうすけ
                 %tr
                   %th カテゴリー
                   %td
-                    %a{:href => "#"} ベビー・キッズ
+                    =link_to "" "ベビー・キッズ"
                     %br/
-                    %a{:href => "#"} ベビー服(男女兼用)  ~95cm
+                    =link_to "" "ベビー服(男女兼用)  ~95cm"
                     %br/
-                    %a{:href => "#"} アウター
+                    =link_to "" "アウター"
                 %tr
                   %th ブランド
                   %td
@@ -58,7 +60,7 @@
                 %tr
                   %th 発送元の地域
                   %td
-                    %a{:href => "#"} 岩手県
+                    =link_to "" "岩手県"
                 %tr
                   %th 発送日の目安
                   %td 4-7日で発送
@@ -104,5 +106,5 @@
               %i.fa.fa-angle-right
 
       .relatedItems
-        %a{:href => "#"} ベビー・キッズをもっと見る
+        = link_to "" "ベビー・キッズをもっと見る"
         .productLists
