--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,12 +1,12 @@
-.main
-  .showMain
+.products-show-main
+  .products-show-wrapper
     -# .contentLeftqq
-    .contentRight
-      .topContent
+    .products-show-contents
+      .products-show-contents__topContent
         
-        .itemBox
-          %h2.itemBox__name ギャグマンガ日和GB 1 増田こうすけ劇場
-          .itemBox__body
+        .products-show-itemBox
+          %h2.products-show-itemBox__title ギャグマンガ日和GB 1 増田こうすけ劇場
+          .products-show-itemBox__pic
             %ul
               %li
                 -# = image_tag 'dog.JPG', :size =>'320x480'　
@@ -18,20 +18,19 @@
                   %li
                     %img{:height => "75", :src => "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/14/a001.png", :width => "75"}/
                   %li
-                    %img{:height => "75", :src => "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/15/a003.png", :width => "75"}/
-
-          .itemBox__price
+                    = image_tag 'pict/bg-appBanner-pict.jpg'
+          .products-show-itemBox__price
             %span
               ¥30000
-            .itemBox__price-tax-sipfee
+            .products-show-itemBox__price--tax_sipfee
               %span
                 (税込)
               %span
                 送料込み
 
-          .itemDetail ジョースター一族と、邪悪な吸血鬼と化したディオやその後継者たちが、1世紀以上に亘って繰り広げる戦いを描く大河群像劇である。舞台は1888年のイギリス。英国の青年貴族で強い正義感と勇気を持つ主人公ジョナサン・ジョースターと、下層階級の出身ながら類稀なカリスマ性と野望の持ち主ディオ・ブランドーの抗争劇。「石仮面」や「波紋」を背景に、2人の成長や対立が描かれている。
+          .products-show-description ジョースター一族と、邪悪な吸血鬼と化したディオやその後継者たちが、1世紀以上に亘って繰り広げる戦いを描く大河群像劇である。舞台は1888年のイギリス。英国の青年貴族で強い正義感と勇気を持つ主人公ジョナサン・ジョースターと、下層階級の出身ながら類稀なカリスマ性と野望の持ち主ディオ・ブランドーの抗争劇。「石仮面」や「波紋」を背景に、2人の成長や対立が描かれている。
 
-          .table
+          .products-show-table
             %table
               %tbody
                 %tr
@@ -64,9 +63,9 @@
                 %tr
                   %th 発送日の目安
                   %td 4-7日で発送
-          
 
-          .optionalArea
+
+          .products-show-fav_bad_btn
             %ul
               %li#likeBtn.optionalBtn.likeBtn
                 %i.fa.fa-star
@@ -76,23 +75,24 @@
                 %a{:href => "#"}
                   %i.fa.fa-flag
                   不適切な商品の通報
-        
-        .commentBox
+
+
+        .products-show-commentBox
           %ul.commentContents
-          %form#new_comment.new_comment{"accept-charset" => "UTF-8", :action => "#", :method => "post"}
+          %form#new_comment.products-show-commentBox__new_comment{"accept-charset" => "UTF-8", :action => "#", :method => "post"}
             %input{:name => "utf8", :type => "hidden", :value => "✓"}/
             %input{:name => "authenticity_token", :type => "hidden", :value => "1NxpNJyDFYtsiCk9sjRs0RKxssQ/jbE95Yf1Rr6D9tO1kd7Cc6EsdZvTr9DslutaNcHzXHre4aMeKiUey8NWzA=="}/
             %textarea#comment_body{:name => "comment[body]", :required => "required"}
-            %p.noticeMsg
+            %p.products-show-commentBox__new_comment__noticeMsg
               相手のことを考え丁寧なコメントを心がけましょう。
               %br/
               不快な言葉遣いなどは利用制限や退会処分となることがあります。
             %br/
-            %button.commentBtn{:name => "button", :type => "submit"}
+            %button.products-show-commentBox__new_comment__commentBtn{:name => "button", :type => "submit"}
               %i.fa.fa-comment
               コメントする
 
-      .link-block
+      .products-show-link-block
         %ul.links
           %li
             %a{:href => "#"}
@@ -105,6 +105,6 @@
               後ろの商品
               %i.fa.fa-angle-right
 
-      .relatedItems
+      .products-show-relatedItems
         = link_to "" "ベビー・キッズをもっと見る"
-        .productLists
+        .products-show-relatedItems__productLists
