--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -49,11 +49,31 @@ body.header{
     &__main {
       padding-top: 15px;
       padding-bottom: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       &--icon {
         background-image: image-url("logo.png");
         height: 40px;
         width: 140px;
         background-size: cover;
+      }
+      &--searchbox {
+        width: 70%;
+        padding: 0.5em 1em;
+        margin: 1em 0;
+        font-weight: bold;
+        border: solid 1px gray;
+        text-align: right;
+        background-color: rgb(245, 245, 245);
+        font-size: 16px;
+        line-height: 1.4em;
+        border-width: 1px;
+        border-style: solid;
+        border-color: rgb(204, 204, 204);
+        border-image: initial;
+        border-radius: 4px;
+        outline: none;
       }
     }
     &__sub {
@@ -122,41 +142,41 @@ body.header{
                 position: relative;
               }
 
-        }
+      }
         &--brand {
           padding-right: 30px;
           padding-left: 16px;
         }
-        &__right {
-          font-size: 14px;
-          display: block;
-          &--log-out{
-            text-decoration: none;
-            color: black;
-          }
-          &--log-out:hover{
-            text-decoration: none;
-            color:red;
-          }
-          &--log-in{
-            text-decoration: none;
-            color: black;
-          }
-          &--log-in:hover{
-            text-decoration: none;
-            color: red;
-          }
-          &--register-user {
-            padding-left: 12px;
-            text-decoration: none;
-            color: black;
-          }
-          &--register-user:hover {
-            padding-left: 12px;
-            text-decoration: none;
-            color: red;
-          }
+      &__right {
+        font-size: 14px;
+        display: flex;
+        &--log-out{
+          text-decoration: none;
+          color: black;
         }
+        &--log-out:hover{
+          text-decoration: none;
+          color:red;
+        }
+        &--log-in{
+          text-decoration: none;
+          color: black;
+        }
+        &--log-in:hover{
+          text-decoration: none;
+          color: red;
+        }
+        &--register-user {
+          padding-left: 12px;
+          text-decoration: none;
+          color: black;
+        }
+        &--register-user:hover {
+          padding-left: 12px;
+          text-decoration: none;
+          color: red;
+        }
+      }
       }
     }
   }
