--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import "modules/pickup_category";
 @import "modules/pickup_brand";
 @import "modules/app_banner";
+@import "modules/display_btn";
 @import "modules/footer";
 @import "products/new";
 @import "products/show";
