--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,4 +9,7 @@
     = javascript_include_tag 'application'
     = javascript_include_tag 'application'
   %body
+    = render 'home/header'
     = yield
+    = render 'home/app_banner'
+    = render 'home/footer'
