updete pickup_categoryのview
## What
- pickup_category.html.haml内のビューをアップデート
## Why
- 見本のviewに近づけるため
## Comment
- 次の日への引き継ぎ

--- a/app/views/home/_pickup_category.html.haml
+++ b/app/views/home/_pickup_category.html.haml
@@ -1,11 +1,12 @@
 .wrapper
   .pickup_category__containerCategory
     %h2.pickup_category__containerCategory__title
-      商品一覧
+      ピックアップカテゴリー
     .pickup_category__containerCategory__product
+
       .pickup_category__containerCategory__product--head
         = link_to "#", class: "pickup_category__products--head" do
-          %h3.head
+          %h3.head 新規投稿商品
       .pickup_category__containerCategory__product--lists
         
         %figure.pickup_category__product__images
