--- a/app/assets/stylesheets/products/_new.scss
+++ b/app/assets/stylesheets/products/_new.scss
@@ -11,12 +11,12 @@
 }
 
 .products_new-main{
-  height: 100vh;
+  height: 1500px;
   width: 100%;
   background-color: #f8f8f8;
   &__form{
-    height: 100%;
-    width: 50%;
+    height: 1500px;
+    width: 48.5%;
     background-color: #fff;
     margin: 0 auto;
     padding: 40px;
@@ -27,10 +27,10 @@
   height: 270px;
   width: 100%;
   padding-bottom: 40px;
-  border-bottom: 1px solid #f8f8f8;
+  border-bottom: 2px solid #f8f8f8;
 }
 
-.products_new-details__headline{
+.products_new-product__headline{
   height: 35px;
   width: 100%;
   display: flex;
@@ -52,7 +52,7 @@
   }
 }
 
-.products_new-details__explanation{
+.products_new-product__explanation{
   height: 20px;
   width: 100%;
   font-size: 13px;
@@ -70,6 +70,7 @@
     display: block;
     text-align: center;
     padding-top: 40px;
+    cursor: pointer;
     &--icon{
       padding-bottom: 10px;
     }
@@ -79,8 +80,95 @@
   }
 }
 
+.products_new-main__form--product{
+  height: 100%;
+  width: 100%;
+}
 
+.products_new-title{
+  height: 150px;
+  width: 100%;
+  padding-top: 40px;
+  &--box{
+    height: 50px;
+    width: 100%;
+    border: 1px solid #d3d3d3;
+    border-radius: 5px;
+    padding: 0 10px;
+  }
+}
 
+.products_new-product__detaile{
+  height: 270px;
+  width: 100%;
+  border-bottom: 2px solid #f8f8f8;
+  &--box{
+    height: 150px;
+    width: 100%;
+    border: 1px solid #d3d3d3;
+    border-radius: 5px;
+    padding: 10px;
+  }
+}
+
+.products_new-product_explanation{
+  height: auto;
+  width: 100%;
+  border-bottom: 2px solid #f8f8f8;
+  &__headline2{
+    padding-top: 40px;
+    color: #808080;
+    font-size: 13px;
+    font-weight: bold;
+  }
+  &__category{
+    height: 250px;
+    width: 100%;
+    padding-top: 40px;
+  }
+}
+
+.products_new-product_explanation__brand{
+  height: 130px;
+  width: 100%;
+  padding-top: 40px;
+}
+
+#products_new-product__headline--required{
+  height: 20px;
+  width: 30px;
+  background-color: #d3d3d3;
+  color: #fff;
+  font-size: 11px;
+  font-weight: bold;
+  line-height: 20px;
+  text-align: center;
+  border-radius: 3px;
+}
+
+.products_new-product_explanation__condition{
+  height: 160px;
+  width: 100%;
+  padding-top: 40px;
+}
+
+select{
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  padding: 7px 30px 7px 10px;
+  line-height: 1.1em;
+  border-radius: 5px;
+  background-repeat: no-repeat;
+  background-size: 12px 10px;
+  background-position: right 10px center;
+  background-color: #fff;
+  border: 1px solid #d3d3d3;
+  height: 50px;
+  width: 100%;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
 
 .products_new-footer{
   height: 210px;
