--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -2,17 +2,49 @@
   = image_tag 'logo/logo.png', class: "products_new-header__logo"
 .products_new-main
   .products_new-main__form
-    = form_with model: @product_image, local: true, id:"new_image" do |form|
-      .products_new-newimage
-        .products_new-details__headline
-          .products_new-details__headline--title 出品画像
-          .products_new-details__headline--required 必須
-        %p.products_new-details__explanation 最大10枚までアップロードできます
-        .products_new-imagearea
-          = form.label :image, class: 'products_new-imagearea__select' do
-            = icon('fas', 'camera', class: 'products_new-imagearea__select--icon')
-            %p.products_new-imagearea__select--explanation
-              ドラッグアンドドロップ
-              %br またはクリックしてファイルをアップロード
-          = form.file_field :image, style: "display: none;"
+    .products_new-main__form--product_image
+      = form_with model: @product_image, local: true, id:"new_image" do |form|
+        .products_new-newimage
+          .products_new-product__headline
+            .products_new-product__headline--title 出品画像
+            .products_new-product__headline--required 必須
+          %p.products_new-product__explanation 最大10枚までアップロードできます
+          .products_new-imagearea
+            = form.label :image, class: 'products_new-imagearea__select' do
+              = icon('fas', 'camera', class: 'products_new-imagearea__select--icon')
+              %p.products_new-imagearea__select--explanation
+                ドラッグアンドドロップ
+                %br またはクリックしてファイルをアップロード
+            = form.file_field :image, style: "display: none;"
+    .products_new-main__form--product
+      = form_with model: @product, local: true, id:"new_product" do |form|
+        .products_new-title
+          .products_new-product__headline
+            .products_new-product__headline--title 商品名
+            .products_new-product__headline--required 必須
+          = form.text_field :name, class:"products_new-title--box", placeholder:"40字まで", maxlength:'40'
+        .products_new-product__detaile
+          .products_new-product__headline
+            .products_new-product__headline--title 商品の説明
+            .products_new-product__headline--required 必須
+          = form.text_area :detaile, class:"products_new-product__detaile--box", placeholder:"商品の説明(必須 1000文字以内)", maxlength:'1000'
+        .products_new-product_explanation
+          .products_new-product_explanation__headline2 商品の詳細
+          .products_new-product_explanation__category
+            .products_new-product__headline
+              .products_new-product__headline--title カテゴリー
+              .products_new-product__headline--required 必須
+            = form.select :category_id, [["レデース",1],["メンズ",2]], prompt: "選択してください", class: "products_new-product_explanation__category--parent"
+            = form.select :category_id, [["トップス",1],["ジャケット",2]], prompt: "選択してください", class: "products_new-product_explanation__category--children"
+            = form.select :category_id, [["Tシャツ",1],["ポロシャツ",2]], prompt: "選択してください", class: "products_new-product_explanation__category--grandchildren"
+          .products_new-product_explanation__brand
+            .products_new-product__headline
+              .products_new-product__headline--title ブランド
+              #products_new-product__headline--required 任意
+            = form.text_field :brand_id, class:"products_new-title--box", placeholder:"例)シャネル", maxlength:'40'
+          .products_new-product_explanation__condition
+            .products_new-product__headline
+              .products_new-product__headline--title 商品の状態
+              .products_new-product__headline--required 必須
+            = form.select :condition, [["新品、未使用",1],["未使用に近い",2]], prompt: "選択してください", class: "products_new-product_explanation__condition--box"
 .products_new-footer
