--- a/app/assets/stylesheets/products/_show.scss
+++ b/app/assets/stylesheets/products/_show.scss
@@ -11,7 +11,7 @@
       .products-show-itemBox{
           background-color: #fff;
           padding: 24px 40px 40px;
-          &__title{
+          &__name{
             text-align: center;
             font-weight: bold;
             font-size: 24px;
@@ -60,7 +60,7 @@
               font-weight: bold;
               margin: 0 10px 0 0;
             }
-            &--tax_sipfee{
+            &--tax_shipfee{
               span{
                 font-size: 16px;
                 font-weight: normal;
@@ -68,7 +68,24 @@
             }
           }
 
+          &__buy-btn{
+            font-size: 24px;
+            line-height: 60px;
+            display: block;
+            margin-top: 16px;
+            background: #3CCACE;
+            color: #fff;
+            line-height: 56px;
+            text-align: center;
+            font-weight: 600;
+            text-decoration: none;
+            a{
+              text-decoration: none;
+            }
+          }
+
           .products-show-description{
+          padding: 32px 0 0;
           line-height: 1.5;
           font-size: 18px;
           margin-bottom: 30px;
