--- a/app/assets/stylesheets/products/_show.scss
+++ b/app/assets/stylesheets/products/_show.scss
@@ -1,5 +1,5 @@
 .products-show-main{
-  background-color: #f47c7c;
+  background-color: #f8f8f8;
 
   .products-show-wrapper{    
     padding: 40px;
@@ -84,7 +84,7 @@
             }
           }
 
-          .products-show-description{
+          .products-show-detail{
           padding: 32px 0 0;
           line-height: 1.5;
           font-size: 18px;
@@ -129,37 +129,35 @@
 
 
         .products-show-fav_bad_btn{
+          margin: 10px 0 0;
           display: flex;
           justify-content: space-between;
           ul{    
             margin: 10px 0 0;
             display: flex;
-            li{
+            li:first-child{
               margin-right: auto;
               padding: 6px 10px;
               border-radius: 40px;
               color: #3CCACE;
               border: 1px solid #ffb340;
-              // i.fa.fa-star{}
             }
           }
-          .products-show-fav_bad_btn{
-            margin: 10px 0 0;
-            display: flex;
-            .optionalBtn{
-              font-size: 14px;
+          ul.optional{
+            font-size: 14px;
+            li.optionalBtn{
+              display: inline-block;
+              border-radius: 4px;
+              border: 1px solid #333;
               a{
-                display: inline-block;
-                border-radius: 4px;
-                color: #333;
-                border: 1px solid #333;
-                text-decoration: none;
-                // .fa{}
+              text-decoration: none;
+              color: #333;
               }
             }
           }
         }
       }
+    
       
       .products-show-commentBox{
         padding: 24px;
