--- a/app/views/home/_pickup_category.html.haml
+++ b/app/views/home/_pickup_category.html.haml
@@ -6,7 +6,7 @@
 
       .pickup_category__containerCategory__product--head
         = link_to "#", class: "pickup_category__products--head" do
-          %h3.head 新規投稿商品
+          %h3.products--head-title 新規投稿商品
       .pickup_category__containerCategory__product--lists
         
         %figure.pickup_category__product__images
