--- a/app/assets/stylesheets/modules/_display_btn.scss
+++ b/app/assets/stylesheets/modules/_display_btn.scss
@@ -9,6 +9,7 @@
   bottom: 32px;
   text-align: center;
   text-decoration: none;
+  z-index: 1;
   &__in-box{
     padding: 15px 15px 10px 15px;
     &--text {
