--- a/app/assets/stylesheets/products/_new.scss
+++ b/app/assets/stylesheets/products/_new.scss
@@ -11,11 +11,11 @@
 }
 
 .products_new-main{
-  height: 1500px;
+  height: 3000px;
   width: 100%;
   background-color: #f8f8f8;
   &__form{
-    height: 1500px;
+    height: auto;
     width: 48.5%;
     background-color: #fff;
     margin: 0 auto;
@@ -131,7 +131,7 @@
 .products_new-product_explanation__brand{
   height: 130px;
   width: 100%;
-  padding-top: 40px;
+  padding-top: 20px;
 }
 
 #products_new-product__headline--required{
@@ -147,9 +147,33 @@
 }
 
 .products_new-product_explanation__condition{
-  height: 160px;
+  height: 120px;
   width: 100%;
-  padding-top: 40px;
+}
+
+.products_new-product_delivery{
+  height: auto;
+  width: 100%;
+  &__headline2{
+    padding-top: 40px;
+    color: #808080;
+    font-size: 13px;
+    font-weight: bold;
+  }
+  &__fee{
+    height: 150px;
+    width: 100%;
+    padding-top: 40px;
+  }
+  &__shipping_area{
+    height: 110px;
+    width: 100%;
+  }
+  &__shipping_days{
+    height: 120px;
+    width: 100%;
+    border-bottom: 2px solid #f8f8f8;
+  }
 }
 
 select{
@@ -168,6 +192,43 @@ select{
   width: 100%;
   margin-bottom: 10px;
   cursor: pointer;
+}
+
+.products_new-product_price{
+  height: 250px;
+  width: 100%;
+  background-color: lightsalmon;
+  border-bottom: 2px solid #f8f8f8;
+  &__headline2{
+    padding: 40px 0 ;
+    color: #808080;
+    font-size: 13px;
+    font-weight: bold;
+  }
+  &--box{
+    height: 50px;
+    width: 100%;
+    border: 1px solid #d3d3d3;
+    border-radius: 5px;
+    padding: 0 10px;
+    text-align: right;
+  }
+}
+
+.products_new-product_price--displayflex{
+  display: flex;
+  justify-content: space-between;
+  align-items:center;
+}
+
+.products_new-product_price--select{
+  align-items:center;
+  display: flex;
+  width: 100%;
+  .products_new-product_price--yen{
+    font-size: 12px;
+    padding-right: 10px;
+  }
 }
 
 .products_new-footer{
