--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -47,4 +47,30 @@
               .products_new-product__headline--title 商品の状態
               .products_new-product__headline--required 必須
             = form.select :condition, [["新品、未使用",1],["未使用に近い",2]], prompt: "選択してください", class: "products_new-product_explanation__condition--box"
+        .products_new-product_delivery
+          .products_new-product_delivery__headline2 配送について
+          .products_new-product_delivery__fee
+            .products_new-product__headline
+              .products_new-product__headline--title 配送料の負担
+              .products_new-product__headline--required 必須
+            = form.select :condition, [["送料込み(出品者負担)",1],["着払い(購入者負担)",2]], prompt: "選択してください", class: "products_new-product_delivery__fee--box"
+          .products_new-product_delivery__shipping_area
+            .products_new-product__headline
+              .products_new-product__headline--title 発送元の地域
+              .products_new-product__headline--required 必須
+            = form.select :condition, [["北海道",1],["沖縄",2]], prompt: "選択してください", class: "products_new-product_delivery__shipping_area--box"
+          .products_new-product_delivery__shipping_days
+            .products_new-product__headline
+              .products_new-product__headline--title 発送までの日数
+              .products_new-product__headline--required 必須
+            = form.select :condition, [["1~2日で発送",1],["2~3日で発送",2]], prompt: "選択してください", class: "products_new-product_delivery__shipping_days--box"
+          .products_new-product_price
+            .products_new-product_price__headline2 価格（¥300〜9,999,999）
+            .products_new-product_price--displayflex
+              .products_new-product__headline
+                .products_new-product__headline--title 販売価格
+                .products_new-product__headline--required 必須
+              .products_new-product_price--select
+                %p.products_new-product_price--yen ¥
+                = form.number_field :age, class: "products_new-product_price--box", placeholder:"0"
 .products_new-footer
