--- a/app/assets/stylesheets/modules/_pickup_brand.scss
+++ b/app/assets/stylesheets/modules/_pickup_brand.scss
@@ -1,22 +1,5 @@
-h3.pickup_brand__head{
-  font-weight: bold;
-  width: 35%;
-  text-align: center;
-  color: #3CCACE;
-  display: flex;
-  align-items: center;
-  margin-left: 280px;
-  &__new {
-    color: rgb(219, 56, 83);
-  }
-  &__left{
-    
-  }
-}
-.pickup_brand__products--head{
-  margin-left: 10px;
-  text-decoration: none;
-}
+
+
 .listBtn{
   text-decoration: none;
   display: inline-block;
@@ -25,40 +8,9 @@ h3.pickup_brand__head{
 .listBtn:hover {
   opacity: 0.5 ;
 }
-.pickup_brand__product--name{
-  overflow: hidden;
-  line-height: 1.5;
-  font-size: 16px;
-  text-align: left;
-}
-.pickup_brand__product__images{
-  width: 220px;
-  height: 150px;
-  position: relative;
-  overflow: hidden;
-  margin: 0;
-  z-index: auto;
-  &--image{
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    z-index: auto;
-    height: 150px;
-    object-fit: cover;
-  }
-}
-.pickup_brand__details__menu{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.pickup_brand__taxIncluded{
-  font-size: 10px;
-  text-align: left;
-}
+
+
+
 .pickup_brand__containerBrand{
   background-color: #f8f8f8;
   padding-bottom: 80px;
@@ -68,39 +20,83 @@ h3.pickup_brand__head{
     font-size: 28px;
     line-height: 1.4;
     font-weight: bold;
-    margin-left: 50px;
   }
   &__product{
-    height: 321px;
     width: 780px;
     margin: 0 auto;
-    
-    &--head{
+    overflow-x: scroll;
+    &__head{
+      text-align: center;
+      .pickup_brand__products--head{
+        text-align: center;
+        color: #3CCACE;
+        font-size: 24px;
+        text-decoration: none;
+        h3.pickup_brand__head {
+          font-weight: bold;
+          align-items: center;
+          &__new {
+            color: rgb(219, 56, 83);
+          }
+          &__left{
+            
+          }
+        }
+      }
     }
     &--lists{
     width: 780px;
     margin: 26px auto;
     display: flex;
     overflow-x: scroll;
-      .product__images {
+      .pickup_brand__product__images{
         margin-left: 45px;
+        width: 220px;
+        height: 150px;
+        position: relative;
+        overflow: hidden;
+        margin: 0;
+        z-index: auto;
+        &--image{
+          position: absolute;
+          top: 0;
+          right: 0;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          z-index: auto;
+          height: 150px;
+          object-fit: cover;
+        }
       }
-    &__list{
-      width: 220px;
-      display: inline-block;
-      &__body{
-        background-color: white;
-        color: black;
-        padding: 16px;
-        &__details__menu{
-          font-size: 16px;
-          text-align: left;
+      &__list{
+        width: 220px;
+        display: inline-block;
+        &__body{
+          background-color: white;
+          color: black;
+          padding: 16px;
+          h3.pickup_brand__product--name{
+            overflow: hidden;
+            line-height: 1.5;
+            font-size: 16px;
+            text-align: left;
+          }
+          &__details__menu{
+            font-size: 16px;
+            text-align: left;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+          }
+          .pickup_brand__taxIncluded{
+            font-size: 10px;
+            text-align: left;
+          }
         }
       }
     }
   }
-}
-
 }
 
 
