--- a/app/views/home/_pickup_brand.html.haml
+++ b/app/views/home/_pickup_brand.html.haml
@@ -3,11 +3,9 @@
     %h2.pickup_brand__containerBrand__title
       ピックアップブランド
     .pickup_brand__containerBrand__product
-      .pickup_brand__containerBrand__product--head
+      .pickup_brand__containerBrand__product__head
         = link_to "#", class: "pickup_brand__products--head" do
-          %h3.pickup_brand__head 
-            //%span.pickup_brand__head__new new!
-            //pickup_brand__head__left ⇦ - - -新規投稿商品- - - ⇨ old
+          %h3.pickup_brand__head Dior
       .pickup_brand__containerBrand__product--lists
             
         %figure.pickup_brand__product__images
