add_users_controller作成,view調整
-what
users/newページ作成のためのアクション

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,5 @@
 @import "products/show";
 @import "modules/registrations.new";
 @import "modules/sessions.new";
+@import "modules/users.new";
+@import "modules/users.show";
